- bios/ikbd.c: Improved debug traces. (VRI)
- bios/ikbd.h: Removed prototypes of nonexistent functions. (VRI)

2011-12-19
- bios/parport.c include/config.h: Added the CONF_WITH_PRINTER_PORT define to
  allow disabling Parallel Printer Port support. (VRI)
- bios/machine.c bios/sound.c bios/sound.h bios/vectors.S include/config.h:
  Added the CONF_WITH_YM2149 define to allow disabling YM2149 soundchip
  support. (VRI)

2011-12-21
- bdos/fsglob.c bios/blkdev.h include/config.h: Moved BLKDEVNUM define to
  config.h; changed number of drvtbl[] entries to BLKDEVNUM. (RFB)
- bdos/proc.c: Changed a hardcoded constant to NUMCURDIR. (RFB)
- include/pd.h: Fixed latent bug: NUMCURDIR now equals BLKDEVNUM. (RFB)
- aes/gemgsxif.c aes/gemgsxif.h: Changed variables that are only used
  locally from GLOBAL to static. (RFB)

2011-12-22
- aes/gemgsxif.c: Fixed memory overwrite in ST Low due to a too-small
  menu/alert backup buffer. (RFB)
- desk/deskapp.c: Use "View as icons" by default for a more Atari feeling. (VRI)

2011-12-23
- bios/blkdev.c bios/floppy.c bios/floppy.h bios/machine.c bios/machine.h
  bios/vectors.S bios/xbios.c doc/changelog.txt include/config.h: Replaced
  CONF_WITH_FLOPPY by a better CONF_WITH_FDC. (VRI)
- bios/bios.c bios/startup.S include/config.h: Added the CONF_WITH_CARTRIDGE
  define to allow disabling the ROM port cartridge support. (VRI)
- bios/blkdev.c bios/floppy.c: Removed floppy_init() as the job is already done
  in flop_hdv_init(). (VRI)
- bios/xhdi.c: Added a trace for the result of acsi_rw() and ide_rw(). (VRI)
- bios/acsi.c bios/acsi.h bios/xhdi.c: Harmonized CONF_WITH_ACSI and
  CONF_WITH_IDE. (VRI)
- bios/floppy.c: Added a timeout debug message in flopini(). (VRI)

2011-12-24
- bios/tosvars.h: Declare flock as volatile for safety. (VRI)
- bios/floppy.c: Do not set the FDC track register when cur_track is -1. (VRI)
- bios/floppy.c: Removed the global variable cur_track. (VRI)
- bios/floppy.c: Removed the flopunlk() parameter. (VRI)